<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="192dp"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"

            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"

                android:src="@drawable/csgo"
                android:scaleType="centerCrop" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.activity.CreateAspectActivity">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/etUrl"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etCondition"
                app:layout_constraintVertical_bias="0.328"
                app:layout_constraintVertical_weight="1"
                app:startIconDrawable="@drawable/ic_url"
                tools:ignore="TouchTargetSizeCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiUrl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/Name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/spRarity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spWeapon"
                app:layout_constraintVertical_bias="0.47000003"
                app:layout_constraintVertical_weight="1"
                app:passwordToggleEnabled="false"
                app:startIconDrawable="@drawable/ic_weapon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiName"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    tools:ignore="TextContrastCheck" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etCondition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/Condition"

                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/etUrl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spRarity"
                app:layout_constraintVertical_weight="1"
                app:startIconDrawable="@drawable/ic_condition"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiCondition"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <Spinner
                android:id="@+id/spWeapon"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@+id/etName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivImage"
                app:layout_constraintVertical_weight="1"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/iv_aspect"
                app:layout_constraintBottom_toTopOf="@+id/spWeapon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.52"
                app:layout_constraintVertical_weight="3"
                tools:ignore="ImageContrastCheck,ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="31dp"
                android:layout_marginBottom="8dp"
                android:text="@string/bt_add"
                app:icon="@drawable/ic_baseline_add_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/bt_cancel"
                app:icon="@drawable/ic_baseline_cancel_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spRarity"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:entries="@array/rarity"
                app:layout_constraintBottom_toTopOf="@+id/etCondition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etName"
                app:layout_constraintVertical_weight="1"
                tools:ignore="SpeakableTextPresentCheck" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextTextPersonName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                app:layout_constraintBottom_toTopOf="@+id/btEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUrl"
                app:layout_constraintVertical_weight="1"
                app:passwordToggleEnabled="false"
                app:startIconDrawable="@drawable/ic_date"
                tools:ignore="TouchTargetSizeCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiDate"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/Date"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>